[package]
name = "cardano-tx-proof"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.100" }
clap = { version = "4", features = ["derive"] }
mithril-client = { version = "0.13.2" }
serde_json = { version = "1.0.149" }
tokio = { version = "1.28.2", features = ["full"] }