[package]
name = "cardano-tx-proof"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.100" }
ciborium = { version = "0.2.2" }
ciborium-io = "0.2.2"
hex = { version = "0.4.3" }
mithril-client = { version = "0.13.2" }
pallas = { version = "1.0.0-alpha.4" }
serde = { version = "1.0.228" }
serde_yaml = { version = "0.9.34+deprecated" }
tokio = { version = "1.28.2", features = ["full"] }
